--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <h2>
-      Oliver Boban Alempijevic <span style="font-size:.8em">aka Trograin</span>
+      Oliver Boban Alempijevic <br /><span style="font-size:.8em">aka Trograin</span>
     </h2>
   </body>
 </html>
